# Revolution

./: CMakeLists.txt  INSTALL  README  Toolchain-cc.cmake  build.sh
cmake/Modules/: FindCEGUI.cmake
include/: Camera.hpp  DataManager.hpp  Drawable.hpp  GUIManager.hpp  Screen.hpp  Shader.hpp  World.hpp
lib/gompile/: main.go
share/countries/: countrylist
share/countries/Afghanistan/: reg-0
share/countries/Albania/: reg-0
share/countries/Algeria/: reg-0
share/countries/Andorra/: reg-0
share/countries/Angola/: reg-0  reg-1
share/countries/Antarctica/: reg-0  reg-1  reg-10  reg-11  reg-12  reg-13  reg-14  reg-15  reg-16  reg-2  reg-3  reg-4  reg-5  reg-6  reg-7  reg-8  reg-9
share/countries/Antigua and Barbuda/: reg-0  reg-1
share/countries/Argentina/: reg-0  reg-1  reg-2
share/countries/Armenia/: reg-0
share/countries/Australia/: reg-0  reg-1  reg-10  reg-100  reg-11  reg-12  reg-13  reg-14  reg-15  reg-16  reg-17  reg-18  reg-19  reg-2  reg-20  reg-21  reg-22  reg-23  reg-24  reg-25  reg-26  reg-27  reg-28  reg-29  reg-3  reg-30  reg-31  reg-32  reg-33  reg-34  reg-35  reg-36  reg-37  reg-38  reg-39  reg-4  reg-40  reg-41  reg-42  reg-43  (+61 more)
share/countries/Austria/: reg-0
share/countries/Azerbaijan/: reg-0  reg-1
share/countries/Bahamas, The/: reg-0  reg-1  reg-2  reg-3  reg-4  reg-5  reg-6  reg-7
share/countries/Bahrain/: reg-0
share/countries/Bangladesh/: reg-0  reg-1
share/countries/Barbados/: reg-0
share/countries/Belgium/: reg-0
share/countries/Belize/: reg-0
share/countries/Benin/: reg-0
share/countries/Bermuda/: reg-0
share/countries/Bhutan/: reg-0
share/countries/Bolivia/: reg-0
share/countries/Bosnia and Herzegovina/: reg-0
share/countries/Botswana/: reg-0
share/countries/Brazil/: reg-0  reg-1  reg-10  reg-2  reg-3  reg-4  reg-5  reg-6  reg-7  reg-8  reg-9
share/countries/Brunei/: reg-0  reg-1
share/countries/Bulgaria/: reg-0
share/countries/Burkina Faso/: reg-0
share/countries/Burundi/: reg-0
share/countries/Byelarus/: reg-0
share/countries/Cambodia/: reg-0  reg-1
share/countries/Cameroon/: reg-0
share/countries/Canada/: reg-0  reg-1  reg-10  reg-11  reg-12  reg-13  reg-14  reg-15  reg-16  reg-17  reg-18  reg-19  reg-2  reg-20  reg-21  reg-22  reg-23  reg-24  reg-25  reg-26  reg-27  reg-28  reg-29  reg-3  reg-30  reg-31  reg-32  reg-33  reg-34  reg-35  reg-36  reg-37  reg-38  reg-39  reg-4  reg-40  reg-41  reg-42  reg-43  reg-44  (+57 more)
share/countries/Cape Verde/: reg-0  reg-1  reg-2  reg-3
share/countries/Central African Republic/: reg-0
share/countries/Chad/: reg-0
share/countries/Chile/: reg-0  reg-1  reg-10  reg-11  reg-12  reg-13  reg-14  reg-15  reg-16  reg-17  reg-18  reg-19  reg-2  reg-20  reg-21  reg-22  reg-23  reg-24  reg-25  reg-26  reg-27  reg-28  reg-29  reg-3  reg-30  reg-31  reg-32  reg-33  reg-34  reg-35  reg-36  reg-37  reg-38  reg-39  reg-4  reg-40  reg-41  reg-5  reg-6  reg-7  (+2 more)
share/countries/China/: reg-0  reg-1  reg-2  reg-3
share/countries/Colombia/: reg-0
share/countries/Comoros/: reg-0  reg-1
share/countries/Congo/: reg-0
share/countries/Costa Rica/: reg-0
share/countries/Croatia/: reg-0  reg-1  reg-2  reg-3
share/countries/Cuba/: reg-0  reg-1
share/countries/Cyprus/: reg-0
share/countries/Czech Republic/: reg-0
share/countries/Denmark/: reg-0  reg-1  reg-2  reg-3  reg-4  reg-5  reg-6  reg-7
share/countries/Djibouti/: reg-0
share/countries/Dominica/: reg-0
share/countries/Dominican Republic/: reg-0
share/countries/Ecuador/: reg-0  reg-1  reg-2  reg-3  reg-4  reg-5  reg-6
share/countries/Egypt/: reg-0
share/countries/El Salvador/: reg-0
share/countries/Equatorial Guinea/: reg-0  reg-1
share/countries/Eritrea/: reg-0  reg-1
share/countries/Estonia/: reg-0  reg-1  reg-2
share/countries/Ethiopia/: reg-0
share/countries/Falkland Islands (Islas Malvinas)/: reg-0  reg-1  reg-2
share/countries/Faroe Islands/: reg-0  reg-1
share/datasets/: gdp_per_capita.csv  gdp_per_capita_color.csv  political_stability.csv
share/layouts/: TaharezRevolution.layout
share/shaders/: world.fs  world.vs
src/: CMakeLists.txt  Camera.cpp  DataManager.cpp  Drawable.cpp  GUIManager.cpp  Main.cpp  Screen.cpp  Shader.cpp  World.cpp
(+697 files in other folders)
